* Fixed: Spacing around checkout widgets.

--- a/sass/partials/_checkout-header.scss
+++ b/sass/partials/_checkout-header.scss
@@ -161,22 +161,3 @@
 .has-flyout--open-fc-checkout-order-review .fc-checkout-header .fc-checkout__cart-link:after {
 	@include icon( 'i-chevron-up' );
 }
-
-
-
-
-
-.fc-checkout-header .fc-checkout__header-widgets {
-	display: none;
-
-	@media (#{$bp-larger-than-desktop}) {
-		display: flex;
-		align-items: center;
-		justify-content: flex-end;
-		margin: 0;
-	}
-}
-
-.fc-main .fc-checkout__below-header-widgets {
-	@media (#{$bp-larger-than-desktop}) { display: none; }
-}
